Bug 130529 - View > Toolbars > Customize is too tall, the contents at the bottom can not be reached, not able to resize
Summary: View > Toolbars > Customize is too tall, the contents at the bottom can not b...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium minor
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.5.0 target:7.4.3
Keywords:
: 146675 (view as bug list)
Depends on:
Blocks: GTK3-Dialog-High
  Show dependency treegraph
 
Reported: 2020-02-08 14:51 UTC by Kevin Suo
Modified: 2022-10-06 02:45 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
screenshot (122.87 KB, image/png)
2020-02-08 14:53 UTC, Kevin Suo
Details
opensuse leap 15.1 (129.48 KB, image/png)
2020-02-15 16:56 UTC, darian rizaludin
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Kevin Suo 2020-02-08 14:51:30 UTC
Dialog at View > Toolbars > Customerize is too tall. The content at the bottom can not be reached, and there is no way to resize or even move the dialog.

This may be GTK3 only.

Version: 7.0.0.0.alpha0+
Build ID: a092262a573d185171b00d2848cc25c14ad33b6e
CPU threads: 4; OS: Linux 5.4; UI render: default; VCL: gtk3; 
Locale: zh-CN (zh_CN.UTF-8); UI-Language: en-US
Calc: threaded

Fedora 31 X64.
Comment 1 Kevin Suo 2020-02-08 14:53:05 UTC
Created attachment 157745 [details]
screenshot

My screen is 1366*768, ThinkPad x230i.
Comment 2 Xisco Faulí 2020-02-13 11:07:13 UTC
I can't reproduce it in

Version: 7.0.0.0.alpha0+
Build ID: 718f540fb63af27c1336f89213444e9af753b8a9
CPU threads: 4; OS: Linux 4.19; UI render: default; VCL: gtk3; 
Locale: en-US (en_US.UTF-8); UI-Language: en-US
Calc: threaded

what happens if you clean your user profile ?
Comment 3 Kevin Suo 2020-02-13 12:15:47 UTC
Xisco Faulí:
Those bugs which blocks GTK3-Dialog-High, including this one, are mostly only reproducible on low resolution /small display machines (usually laptops such as Thinpad X230i). 

You may not reproduce it if your display is big enough (e.g., a desktop computer).

Resetting user profile does not help.

I am using Fedora 31 with the latest Gnome environment.
Comment 4 Didiet Agus Pambudiono 2020-02-15 14:13:35 UTC
the same thing happens when I use GDM in openSUSE Tumbleweed, but this does not happen when I use KDE Plasma ver 5.18.0

Version: 6.4.0.3
Build ID: 40(Build:3)
CPU threads: 4; OS: Linux 5.5; UI render: default; VCL: gtk3; 
Locale: id_ID (id_ID.UTF-8); UI-Language: en-US
Calc: threaded

openSUSE Tumbleweed
Comment 5 darian rizaludin 2020-02-15 16:56:57 UTC
Created attachment 157896 [details]
opensuse leap 15.1

the same thing happened to openSUSE Leap 15.1

Version: 6.4.0.3
Build ID: b0a288ab3d2d4774cb44b62f04d5d28733ac6df8
CPU threads: 4; OS: Linux 4.12; UI render: default; VCL: gtk3; 
Locale: en-US (en_US.UTF-8); UI-Language: en-US
Calc: threaded
Comment 6 Buovjaga 2020-05-09 14:11:58 UTC
NEW per last comments
Comment 7 Kevin Suo 2020-11-18 11:37:24 UTC
I see there is scroll bar on e.g. "available commands" box. As a result, reduce the height of those boxes may resolve this issue. It would be ideal of we can have a scroll bar for the top-level container itself.
Comment 8 Commit Notification 2022-10-05 18:15:47 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/d23b1d0240e8ca4a33fbd4fcd368c4ece7b8866a

Resolves: tdf#130529 reduce height of customize dialog

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Caolán McNamara 2022-10-05 18:19:38 UTC
*** Bug 146675 has been marked as a duplicate of this bug. ***
Comment 10 Commit Notification 2022-10-06 02:45:10 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/80657dca762151da47bec567c0a72786a6da61f9

Resolves: tdf#130529 reduce height of customize dialog

It will be available in 7.4.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.