Resolves: tdf#130529 reduce height of customize dialog

to fit in 768px height (with default UI font size)

Change-Id: I2359e39205e7c13335a7ed266dd367cf45e5dcb8
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/140988
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>